fixed x on the modal on mobile view

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -180,6 +180,19 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
+@media (max-width: 768px) {
+  .modal-content {
+    width: 90%;
+    padding: 10px;
+  }
+
+  .close-button {
+    font-size: 24px;
+    right: 20px;
+    top: 6px;
+  }
+}
+
 @media screen and (max-width: 375px) {
   #contact {
     height: fit-content;
